Table Overflow Fix (#510)

--- a/src/global.less
+++ b/src/global.less
@@ -23,3 +23,7 @@ body {
   height: 100%;
   cursor: col-resize;
 }
+
+.ant-pro-table-list-toolbar {
+  overflow-x: scroll;
+}
